snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha256
59e90b5d598c02301af13c000cc1a75509da882c67a83c0c90e537903c6c2283